# anomaly-detection-fraud-transaction

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: default.yaml  models.yaml
notebooks/: 01_eda.ipynb  02_results_analysis.ipynb
outputs/: exp1_summary.csv  exp2_imbalance.csv
outputs/figures/: exp1_summary_table.csv
scripts/: download_data.py  make_figures.py  run_experiment.py  tune_hyperparams.py
src/: data.py  evaluation.py  models.py  plots.py  utils.py
tests/: test_basics.py
